# otcat

./: .editorconfig  .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Release  SECURITY.md  go.mod  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-release.yml  release.yml
alpine/aarch64/: otcat_1.0.0_aarch64.apk
alpine/x86_64/: otcat.apk
benchmarks/: README.md  latency_loopback.json  latency_samples_us.txt  raw_results.txt  summary.json  tank_watch.ndjson
cmd/otc/: main.go
cmd/otcat/: main.go
cmd/otcat-latencyprobe/: main.go
cmd/otcat-mockplc/: main.go
debian/amd64/: Packages  Release  otcat_1.0.0_amd64.deb
debian/arm64/: Packages  Release  otcat_1.0.0_arm64.deb
demo/: README.md  _typing.sh  pipes.sh  quickstart.sh  write_safety.sh
demo/tapes/: pipes.tape  quickstart.tape  write_safety.tape
docs/: backoff.md  classic_addressing.md  driver_roadmap.md  index.html  interop_testing.md  releasing.md
internal/bacnet/: driver.go
internal/cliapp/: actions.go  cliapp.go  cliapp_test.go  flags.go  internal_test.go  stubs.go
internal/codec/: bench_test.go  codec.go  codec_test.go
internal/eip/: driver.go
internal/mock/: process.go  server.go
internal/modbus/: address.go  address_test.go  bench_test.go  client.go  client_test.go  convert.go  convert_test.go  driver.go  driver_test.go  exception.go  fuzz_test.go  limits.go  mbap.go  (+4 more)
paper/: README.md  otcat.tex
python/: README.md  pyproject.toml
python/docs/: packaging.md
python/examples/: alerting_example.py  audit_example.py  fastapi_service.py  pandas_quickstart.py  streamlit_dashboard.py
python/otcat/: __init__.py  _binary.py  aio.py  alerting.py  audit.py  client.py  exceptions.py  models.py  pandas_ext.py
python/otcat/_bin/: otcat-linux-amd64
python/tests/: conftest.py  test_aio.py  test_alerting.py  test_audit.py  test_client.py  test_pandas_ext.py
rpm/: otcat-1.0.0-1.aarch64.rpm  otcat-1.0.0-1.x86_64.rpm
scripts/: interop_node_server.js  interop_pymodbus_server.py  plot_results.py
(+15 files in other folders)
