[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otcat"
version = "1.0.0"
description = "Python bindings for otcat, the netcat for industrial I/O -- reads and writes Modbus TCP through the real Go core."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Moustafa Mahmoud Atta", email = "MoustafaAt1a@outlook.com" },
]
requires-python = ">=3.9"
keywords = ["modbus", "industrial", "scada", "ics", "ot", "plc", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Deliberately zero hard dependencies beyond the Python standard
# library, mirroring the Go core's own zero-dependency design: the
# base Client/AsyncClient work with nothing else installed. Everything
# in the bullet list below is opt-in.
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
fastapi = ["fastapi>=0.100", "uvicorn>=0.23"]
dashboard = ["streamlit>=1.28"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pandas>=1.5",
    "mypy>=1.5",
    "ruff>=0.1",
]
all = ["otcat[pandas,fastapi,dashboard]"]

[project.urls]
Homepage = "https://github.com/QuitOperation/otcat"
"Go core" = "https://github.com/QuitOperation/otcat"
Documentation = "https://github.com/QuitOperation/otcat/tree/main/python"
Issues = "https://github.com/QuitOperation/otcat/issues"

[tool.hatch.build.targets.wheel]
packages = ["otcat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
